fix strange delay-loading-fb-login-button problem that stretched the topnavbar
git-svn-id: file:///Users/lambert/Projects/svn/dancesite@1523 67443d69-2279-40e3-8022-4dbfd14c1b02

--- a/css/dancedeets.css
+++ b/css/dancedeets.css
@@ -146,6 +146,8 @@ h3.event-title {
 
 .fb_button-nav {
 	padding: 10px 10px 0px;
+	/* because otherwise the in-progress load causes the top-bar to grow uncontrollably for a bit. this isolates it. */
+	position: absolute;
 }
 
 .permission-reason {
